Javascript linebreak in Google analytics code fixed. Footer DIV font size reduced.

--- a/debshots/public/css/style.css
+++ b/debshots/public/css/style.css
@@ -172,6 +172,7 @@ h3
     padding: 0.2em 4em 0.2em 4em;
     clear: both;
     margin-top: 1em;
+    font-size: 80%;
 }
 
 p
